Fix half-star icon alignment

--- a/styles/nemo.css
+++ b/styles/nemo.css
@@ -71,7 +71,7 @@
 .fa-star-half {
 	color: #f4c63d;
 	position: absolute;
-	top: 4px;
+	top: 1px;
 	left: -1px;
 }
 
